--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,13 +8,19 @@
         <filter-name>springSecurityFilterChain</filter-name>
         <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
     </filter>
+
+
     <filter-mapping>
         <filter-name>springSecurityFilterChain</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
+
+
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
+
+
     <servlet>
 		<servlet-name>mvc-dispatcher</servlet-name>
         <init-param>
@@ -23,6 +29,7 @@
             <param-value>
                 /WEB-INF/security-config.xml,
                 /WEB-INF/data-source-config.xml
+                /WEB-INF/view-config.xml
             </param-value>
         </init-param>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -31,14 +38,18 @@
 
 	<servlet-mapping>
 		<servlet-name>mvc-dispatcher</servlet-name>
-
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
+
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>
             /WEB-INF/security-config.xml,
             /WEB-INF/data-source-config.xml
+            /WEB-INF/view-config.xml
         </param-value>
     </context-param>
+
+
+
 </web-app>
